# taskios

./: .gitignore  Cargo.toml
application/: Cargo.toml
application/src/: lib.rs
application/src/repositories/: mod.rs
application/src/repositories/projects/: delete.rs  insert.rs  list.rs  mod.rs  retrieve.rs
application/src/use_cases/: mod.rs
domain/: Cargo.toml
domain/migrations/: 0001_initial_structure.sql
domain/src/: lib.rs
domain/src/models/: mod.rs  project.rs  task.rs
migrations/: 0001_initial_structure.sql
presentation/: Cargo.toml
presentation/src/: main.rs
presentation/src/routes/projects/: add_task.rs  create.rs  delete.rs  get.rs  list.rs  mod.rs
presentation/src/routes/tasks/: change_completion.rs  delete.rs  mod.rs  update.rs
src/: config.rs  main.rs  web.rs
src/cli/: mod.rs
src/cli/commands/: migrate.rs  mod.rs  run.rs
src/errors/: config.rs  mod.rs
src/errors/feature/: project.rs  task.rs
src/errors/repository/: mod.rs  project.rs  task.rs
src/errors/utils/: auth.rs
src/errors/web/: json.rs  mod.rs  path.rs  query.rs  server.rs  token.rs
src/extractors/: mod.rs  token.rs
src/features/: mod.rs
src/features/project/: create.rs  create_task.rs  delete.rs  delete_task.rs  list.rs  list_tasks.rs  mod.rs  update.rs  update_task.rs
src/features/task/: create.rs  delete.rs  list.rs  mod.rs  update.rs
src/models/: mod.rs  project.rs  task.rs  user_project.rs  user_project_page.rs
src/params/feature/: project.rs  task.rs
src/repositories/: project.rs  task.rs
src/utils/: auth.rs  database.rs  error.rs  mod.rs  panic.rs  project.rs
(+38 files in other folders)
