[package]
name = "taskios"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
thiserror = "2"
clap = { version = "4.5.40", features = ["derive"] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "postgres" ] }
clin = { git = "https://github.com/Baguuc/clin" }
colored = "3.0.0"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
authios-sdk = { git = "https://github.com/Baguuc/authios-rust-sdk", version = "0.1.0" }
serde_with = "3.15.1"