[package]
name = "presentation"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
authios-sdk = { git = "https://github.com/Baguuc/authios", version = "0.1.0" }
clap = "4.5.45"
clin = { git = "https://github.com/Baguuc/clin", version = "0.1.0" }
serde.workspace = true
sqlx.workspace = true
taskios-application = { version = "0.1.0", path = "../application" }
taskios-domain = { version = "0.1.0", path = "../domain" }
tokio = "1.47.1"
